final js fallback as previous attempt was not 100% correct, moved alert and fixed the close button moving outside of alert

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -1,20 +1,17 @@
 {% extends "base.html" %}
 {% load static %}
 {% block page_alert %}
-<div class="row alert-container d-none d-sm-block">
+<div class="alert row d-none d-sm-block site-wide-alert float-left">
 
-  <div class="col-12">
-    <div class="site-wide-alert alert alert-danger ">
-      <i class="fas fa-head-side-virus fa-lg"></i> Our team is commited to you during this pandemic but services
-      may be impacted! <a class="text-white font-weight-bold" href="{% url 'covid' %}"> Click Here For Current
-        Covid Info</a>
+  <i class="fas fa-head-side-virus fa-lg"></i> Our team is commited to you during this pandemic but services
+  may be impacted! <a class="text-white font-weight-bold" href="{% url 'covid' %}"> Click Here For Current
+    Covid Info</a>
 
-      <button type="button" class="close text-white" data-dismiss="alert" aria-label="Close">
-        <span aria-hidden="true">&times;</span>
-      </button>
-    </div>
-  </div>
+  <button type="button" class="close text-white" data-dismiss="alert" aria-label="Close">
+    <span aria-hidden="true">&times;</span>
+  </button>
 </div>
+
 {% endblock %}
 {% block content %}
 
@@ -33,8 +30,9 @@
     <div class="row">
       <div class="col-12 bg-white mb-5">
         <noscript>
-          <h4 class="text-danger m-5 text-center">You have disabled Javascript, Whilst most of the site is accessible we
-            advise to enable Javascript to obtain quotes instantly.</h4>
+          <h4 class="text-danger m-5 text-center font-weight-bold">You have disabled Javascript, to have the best
+            experience we suggest
+            you have Javascript enabled. Once enabled you will be able to access the store and obtain quotes.</h4>
         </noscript>
         <form id="home_quote" method="POST" class="form mb-2 p-3 bg-white d-none" enctype="multipart/form-data">
           {% csrf_token %}
