--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -205,10 +205,10 @@
             <fieldset>
               <div class="row" id="contact_details">
                 <div class="col-12 col-md-6">
-                  {{ quote_form.phone_number | as_crispy_field }}
+                  {{ quote_form.bookers_phone_number | as_crispy_field }}
                 </div>
                 <div class="col-12 col-md-6">
-                  {{ quote_form.email | as_crispy_field }}
+                  {{ quote_form.bookers_email | as_crispy_field }}
                 </div>
               </div>
             </fieldset>
