--- a/quote/templates/quote/quote.html
+++ b/quote/templates/quote/quote.html
@@ -225,14 +225,14 @@
               <div class="col-12 col-md-6">
 
 
-                {{ quote_form.phone_number | as_crispy_field }}
+                {{ quote_form.bookers_phone_number | as_crispy_field }}
 
 
               </div>
 
               <div class="col-12 col-md-6">
 
-                {{ quote_form.email | as_crispy_field }}
+                {{ quote_form.bookers_email | as_crispy_field }}
 
               </div>
 
