--- a/templates/includes/store-nav.html
+++ b/templates/includes/store-nav.html
@@ -1,8 +1,8 @@
-<div id="store" class="row bg-dark nav">
+<div id="store" class="row bg-dark nav nav-line-height">
   <nav class="navbar navbar-expand-lg navbar-dark w-100">
     <div class="collapse navbar-collapse" id="store-nav">
       <ul class="navbar-nav">
-        <li class="nav-item search-bar">
+        <li class="nav-item nav-width search-bar">
           <a class="text-light nav-link" href="#" id="drop-search" data-toggle="dropdown" aria-haspopup="true"
             aria-expanded="false">
             <div>
@@ -26,9 +26,9 @@
           </div>
         </li>
       </ul>
-      <ul class="navbar-nav w-auto mx-auto">
+      <ul class="navbar-nav pb-2">
 
-        <li class="nav-item dropdown">
+        <li class="nav-item nav-width dropdown">
           <a class="logo-font nav-link mr-5 text-light text-nowrap" href="#" id="all-products-link"
             data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             All Products
@@ -41,7 +41,7 @@
             <a href="{% url 'products' %}" class="dropdown-item inline-list">All Products</a>
           </ul>
         </li>
-        <li class="nav-item dropdown">
+        <li class="nav-item nav-width dropdown">
           <a class="logo-font nav-link mr-5 text-light text-nowrap" href="#" id="boxes-link" data-toggle="dropdown"
             aria-haspopup="true" aria-expanded="false">
             Boxes
@@ -57,7 +57,7 @@
               Boxes</a>
           </ul>
         </li>
-        <li class="nav-item dropdown">
+        <li class="nav-item nav-width dropdown">
           <a class="logo-font nav-link mr-5 text-light text-nowrap" href="#" id="general-packing-link"
             data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             General Packing
@@ -75,14 +75,14 @@
               Fill</a>
           </ul>
         </li>
-        <li class="nav-item">
+        <li class="nav-item nav-width">
           <a class="logo-font nav-link mr-5 text-light text-nowrap" id="tape-link"
             href="{% url 'categories' %}?category=tape">
             Tape
           </a>
         </li>
 
-        <li class="nav-item">
+        <li class="nav-item nav-width">
           <a class="logo-font nav-link text-light mr-5" id="labels-link" href="{% url 'categories' %}?category=labels">
             Labels
           </a>
