--- a/quote/templates/quote/details.html
+++ b/quote/templates/quote/details.html
@@ -83,6 +83,132 @@
           <div class="row">
             <div id="items" class="col-12">
               <fieldset>
+                <legend class="">Dimensions & Weight</legend>
+                <div id="item_1" class="d-flex justify-content-around row">
+                  <div class="col-12">
+                    <fieldset>
+                      <legend class="small">Item 1</legend>
+                      <div class="row">
+                        <div class="col-sm-3">
+                          {% crispy_addon booking_form.weight append='kg' %}
+
+                        </div>
+                        <div class="col-sm-3">
+                          {% crispy_addon booking_form.height append='cm' %}
+                        </div>
+                        <div class="col-sm-3">
+                          {% crispy_addon booking_form.length append='cm' %}
+                        </div>
+                        <div class="col-sm-3">
+                          {% crispy_addon booking_form.width append='cm' %}
+                        </div>
+                      </div>
+                    </fieldset>
+                  </div>
+
+                </div>
+                <div id="item_2" class="d-none justify-content-around row">
+                  <div class="col-12">
+                    <fieldset>
+                      <legend class="small">Item 2</legend>
+                      <div class="row">
+                        <div class="col-sm-3">
+                          {% crispy_addon booking_form.weight1 append='kg' %}
+
+                        </div>
+                        <div class="col-sm-3">
+                          {% crispy_addon booking_form.height1 append='cm' %}
+                        </div>
+                        <div class="col-sm-3">
+                          {% crispy_addon booking_form.length1 append='cm' %}
+                        </div>
+                        <div class="col-sm-3">
+                          {% crispy_addon booking_form.width1 append='cm' %}
+                        </div>
+                      </div>
+                    </fieldset>
+                  </div>
+                </div>
+                <div id="item_3" class="d-none justify-content-around row">
+                  <div class="col-12">
+                    <fieldset>
+                      <legend class="small">Item 3</legend>
+                      <div class="row">
+                        <div class="col-sm-3">
+                          {% crispy_addon booking_form.weight2 append='kg' %}
+
+                        </div>
+                        <div class="col-sm-3">
+                          {% crispy_addon booking_form.height2 append='cm' %}
+                        </div>
+                        <div class="col-sm-3">
+                          {% crispy_addon booking_form.length2 append='cm' %}
+                        </div>
+                        <div class="col-sm-3">
+                          {% crispy_addon booking_form.width2 append='cm' %}
+                        </div>
+                      </div>
+                    </fieldset>
+                  </div>
+                </div>
+                <div id="item_4" class="d-none justify-content-around row">
+                  <div class="col-12">
+                    <fieldset>
+                      <legend class="small">Item 4</legend>
+                      <div class="row">
+                        <div class="col-sm-3">
+                          {% crispy_addon booking_form.weight3 append='kg' %}
+
+                        </div>
+                        <div class="col-sm-3">
+                          {% crispy_addon booking_form.height3 append='cm' %}
+                        </div>
+                        <div class="col-sm-3">
+                          {% crispy_addon booking_form.length3 append='cm' %}
+                        </div>
+                        <div class="col-sm-3">
+                          {% crispy_addon booking_form.width3 append='cm' %}
+                        </div>
+                      </div>
+                    </fieldset>
+                  </div>
+                </div>
+                <div id="item_5" class="d-none justify-content-around row">
+                  <div class="col-12">
+                    <fieldset>
+                      <legend class="small">Item 5</legend>
+                      <div class="row">
+                        <div class="col-sm-3">
+                          {% crispy_addon booking_form.weight4 append='kg' %}
+
+                        </div>
+                        <div class="col-sm-3">
+                          {% crispy_addon booking_form.height4 append='cm' %}
+                        </div>
+                        <div class="col-sm-3">
+                          {% crispy_addon booking_form.length4 append='cm' %}
+                        </div>
+                        <div class="col-sm-3">
+                          {% crispy_addon booking_form.width4 append='cm' %}
+                        </div>
+                      </div>
+                    </fieldset>
+                  </div>
+                </div>
+                <div class="ml-3 d-flex justify-content-end">
+                  <button type="button" class="btn pl-3" id="less_items">
+                    <i class="fas fa-minus"></i>
+                  </button>
+                  <button type="button" class="btn pl-3" id="more_items">
+                    <i class="fas fa-plus"></i>
+                  </button>
+                </div>
+              </fieldset>
+            </div>
+          </div>
+          <div class="row">
+            <div id="items" class="col-12">
+              <fieldset>
                 <legend class="w-100">Dimensions & Weight</legend>
                 <div class="w-100 d-flex justify-content-around">
                   <div class="mx-3 ">
@@ -114,7 +240,8 @@
           </div>
         </div>
         <div class="text-right">
-          <button action="{% url 'details' quote.quote_ref %}" name="details" class="btn-dark btn btn-md rounded-0" type="submit">Enter
+          <button action="{% url 'details' quote.quote_ref %}" name="details" class="btn-dark btn btn-md rounded-0"
+            type="submit">Enter
             Details</button>
           <button name="update" class="btn-dark btn btn-md rounded-0" type="submit">Update
             Quote!</button>
