--- a/templates/includes/store-nav.html
+++ b/templates/includes/store-nav.html
@@ -26,7 +26,7 @@
           </div>
         </li>
       </ul>
-      <ul class="navbar-nav pb-2">
+      <ul class="navbar-nav pb-2 w-auto m-auto">
 
         <li class="nav-item nav-width dropdown">
           <a class="logo-font nav-link mr-5 text-light text-nowrap" href="#" id="all-products-link"
