--- a/store_bag/templates/store_bag/bag.html
+++ b/store_bag/templates/store_bag/bag.html
@@ -17,14 +17,13 @@
     <div class="row">
         <div class="col">
             <hr>
-            <h2 class="logo-font mb-4">Shopping Bag</h2>
+            <h2 class="logo-font mb-4"></h2>
             <hr>
         </div>
     </div>
     
     <div class="row">
         <div id="bag-parent" class="col">
-            
             {% if bag_items %}
             
            
@@ -33,30 +32,19 @@
                     <thead class="text-black">
                         <tr>
                             <th scope="col">Product Info</th>
-                            <th scope="col"></th>
                             <th scope="col">Price</th>
-                            <th scope="col">Qty</th>
-                            <th scope="col">Subtotal</th>
+                          
                         </tr>
                     </thead>
-
+                   
                     {% for item in bag_items %}
 
                     <tr>
-                        <td class="p-3 w-25">
-                            {% include "store_bag/product-image.html" %}
-                        </td>
                         <td class="py-3">
                             {% include "store_bag/product-info.html" %}
                         </td>
                         <td class="py-3">
-                            <p class="my-0">£{{ item.product.price }}</p>
-                        </td>
-                        <td class="py-3 w-25">
-                            {% include "store_bag/quantity-form.html" %}
-                        </td>
-                        <td class="py-3">
-                            <p class="my-0">£{{ item.product.price | calc_subtotal:item.quantity }}</p>
+                            <p class="my-0">£{{ item.quote.quote }}</p>
                         </td>
                     </tr>
                     {% endfor %}
