removed adjust bag and edited removed from bag views so it works with the bookings

--- a/store_bag/templates/store_bag/quantity-form.html
+++ b/store_bag/templates/store_bag/quantity-form.html
@@ -1,1 +1,1 @@
-<a class="remove-item text-danger float-right" id="remove_{{ item.quote.quote_ref }}" data-product_size="{{item.quote.quote}}"><small>Remove</small></a>
+<a class="remove-item text-danger" id="remove_{{ item.quote.quote_ref }}"><small>Remove</small></a>
