--- a/store_bag/templates/store_bag/bag.html
+++ b/store_bag/templates/store_bag/bag.html
@@ -24,6 +24,7 @@
     
     <div class="row">
         <div id="bag-parent" class="col">
+            {{bag_items}}
             {% if bag_items %}
             
            
@@ -32,8 +33,8 @@
                     <thead class="text-black">
                         <tr>
                             <th scope="col">Product Info</th>
-                            <th scope="col">Price</th>
                             <th scope="col">Subtotal</th>
+                            <th scope="col"></th>
                         </tr>
                     </thead>
                    
@@ -44,13 +45,10 @@
                             {% include "store_bag/product-info.html" %}
                         </td>
                         <td class="py-3">
-                            <p class="my-0">£{{ item.product.price }}</p>
+                            <p class="my-0">£{{ item.subtotal }}</p>
                         </td>
                         <td class="py-3 w-25">
                             {% include "store_bag/quantity-form.html" %}
-                        </td>
-                        <td class="py-3">
-                            <p class="my-0">£{{ item.product.price }}</p>
                         </td>
                     </tr>
                     {% endfor %}
@@ -71,11 +69,11 @@
             
             {% else %}
             <p class="lead mb-5">Your bag is empty.</p>
-            <a href="{% url 'products' %}" class="btn btn-outline-black rounded-0 btn-lg">
+            <a href="{% url 'home' %}" class="btn btn-outline-black rounded-0 btn-lg">
                 <span class="icon">
                     <i class="fas fa-chevron-left"></i>
                 </span>
-                <span class="text-uppercase">Keep Shopping</span>
+                <span class="text-uppercase">Book a Delivery</span>
             </a>
             {% endif %}
         </div>
